[package]
name = "haversine"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.5", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0"
rand_chacha = "0.3"
memmap2 = "0.9.4"
byteorder = "1.5.0"
nom = "7.1.3"
perf = { path = "./perf" }

[lints.clippy]
pedantic = "warn"
